add selfPortrait change navbar and footer bg

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" type="image/svg+xml" href="public/img/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="public/img/everforestBean.svg" />
 		<link rel="stylesheet" href="output.css" />
 		<title>Christian Crespo | Fullstack Developer</title>
 	</head>
@@ -15,15 +15,18 @@
 				<br />Fullstack Developer
 			</h1>
 
-			<!-- img -->
-			<div class="aspect-square w-24 bg-fg"></div>
+			<img
+				class="max-w-2xl place-self-end sepia-[40%]"
+				src="./public/img/selfPortrait.png"
+				alt=""
+			/>
 		</div>
 
 		<!-- navbar -->
-		<header class="sticky top-0 bg-bg0 z-10">
+		<header class="sticky top-0 z-10 bg-bg_dim">
 			<nav class="flex items-center justify-between px-8 py-2">
 				<a href="#hero">
-					<img class="w-12" src="public/img/WhiteBeanLogo.svg" alt="logo" />
+					<img class="w-12" src="public/img/everforestBean.svg" alt="logo" />
 				</a>
 				<ul class="flex gap-12 text-lg font-bold">
 					<li><a href="#about">About</a></li>
@@ -94,7 +97,7 @@
 				<!-- salsa beats -->
 				<div class="flex justify-center py-8">
 					<div class="grid max-w-6xl grid-cols-[1fr_1fr] justify-items-center gap-8">
-						<img class="border-fg border" src="./public/img/testScreenshot.png" alt="">
+						<img class="border border-fg" src="./public/img/testScreenshot.png" alt="" />
 						<div class="flex flex-1 flex-col justify-around">
 							<h3 class="text-2xl">Salsa Beats</h3>
 							<p>
@@ -141,14 +144,14 @@
 								</button>
 							</div>
 						</div>
-						<img class="border-fg border" src="./public/img/testScreenshot.png" alt="">
+						<img class="border border-fg" src="./public/img/testScreenshot.png" alt="" />
 					</div>
 				</div>
 
 				<!-- Odin book -->
 				<div class="flex justify-center py-8">
 					<div class="grid max-w-6xl grid-cols-[1fr_1fr] justify-items-center gap-8">
-						<img class="border-fg border" src="./public/img/testScreenshot.png" alt="">
+						<img class="border border-fg" src="./public/img/testScreenshot.png" alt="" />
 						<div class="flex flex-1 flex-col justify-around">
 							<h3 class="text-2xl">Odin Book</h3>
 							<p>
@@ -195,7 +198,7 @@
 								</button>
 							</div>
 						</div>
-						<img class="border-fg border" src="./public/img/testScreenshot.png" alt="">
+						<img class="border border-fg" src="./public/img/testScreenshot.png" alt="" />
 					</div>
 				</div>
 			</div>
@@ -233,7 +236,8 @@
 		</div>
 
 		<!-- footer -->
-		<footer class="flex flex-col text-center">
+				< class="absolute top-0 left-0 w-full h-full bg-red z-10"></>
+		<footer class="flex flex-col text-center bg-bg_dim">
 			<div>
 				<a href="">Git</a>
 				<a href="">Email</a>
