add frontend developer info add language/framework logos

--- a/index.html
+++ b/index.html
@@ -52,12 +52,31 @@
 						<div class="absolute bottom-0 h-[2px] w-1/2 bg-orange z-10 group-data-[tab=f]:translate-x-0 group-data-[tab=b]:translate-x-[100%] transition-all shadow-[0px_0px_2px_0px] shadow-orange"></div>
 					</div>
 
-					<div class="p-4 peer-data-[tab=f]:block peer-data-[tab=b]:hidden">
-						<p>
+					<div class="p-4 peer-data-[tab=f]:flex peer-data-[tab=b]:hidden gap-4">
+						<p class="flex-1">
 							Frontend lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia ab ullam quasi
 							libero modi rerum rem. Natus iste saepe aliquid maxime ipsum totam architecto libero
 							voluptatem aliquam! Quia, nemo facere!
 						</p>
+
+						<div class="flex-1">
+							<div>
+								<span>Languages</span>
+								<div class="flex gap-2">
+									<img class="w-12" src="./public/img/htmlLogo.svg" alt="">
+									<img class="w-12" src="./public/img/cssLogo.svg" alt="">
+									<img class="w-12 p-1" src="./public/img/jsLogo.svg" alt="">
+									<img class="w-12 p-1" src="./public/img/tsLogo.svg" alt="">
+								</div>
+							</div>
+							<div>
+								<span>Frameworks</span>
+								<div class="flex gap-2">
+									<img class="w-12" src="./public/img/reactLogo.svg" alt="">
+
+								</div>
+							</div>
+						</div>
 					</div>
 
 					<div class="p-4 peer-data-[tab=f]:hidden peer-data-[tab=b]:block">
