add backend dev languages and logos

--- a/index.html
+++ b/index.html
@@ -73,18 +73,36 @@
 								<span>Frameworks</span>
 								<div class="flex gap-2">
 									<img class="w-12" src="./public/img/reactLogo.svg" alt="">
-
+									<img class="w-12" src="./public/img/vueLogo.svg" alt="">
+									<img class="w-12" src="./public/img/astroLogo.svg" alt="">
 								</div>
 							</div>
 						</div>
 					</div>
 
-					<div class="p-4 peer-data-[tab=f]:hidden peer-data-[tab=b]:block">
-						<p>
+					<div class="p-4 peer-data-[tab=f]:hidden peer-data-[tab=b]:flex gap-4">
+						<p class="flex-1">
 							Backend lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia ab ullam quasi
 							libero modi rerum rem. Natus iste saepe aliquid maxime ipsum totam architecto libero
 							voluptatem aliquam! Quia, nemo facere!
 						</p>
+
+						<div class="flex-1">
+							<div>
+								<span>Languages</span>
+								<div class="flex gap-2">
+									<img class="w-12 p-1" src="./public/img/jsLogo.svg" alt="">
+									<img class="w-12 p-1" src="./public/img/tsLogo.svg" alt="">
+									<img class="w-12" src="./public/img/pythonLogo.svg" alt="">
+									<img class="w-12" src="./public/img/goLogo.svg" alt="">
+								</div>
+							</div>
+							<div>
+								<span>Frameworks</span>
+								<div class="flex gap-2">
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
